Claims (#36)
* feat: expose more request data

* docs: fix javadocs