@@ -8,20 +8,19 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import com.fasterxml.jackson.annotation.JsonProperty;
 import com.google.common.collect.ImmutableList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import lombok.AllArgsConstructor;
+import lombok.NoArgsConstructor;
+import lombok.Value;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentMatchers;
 
 class JwtParserTest {
   private final String testJwt =
       "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJPbmxpbmUgSldUIEJ1aWxkZXIiLCJpYXQiOjE2MjEzNjM1OTcsImV4cCI6MTY1Mjg5OTU5NywiYXVkIjoid3d3LmV4YW1wbGUuY29tIiwic3ViIjoianJvY2tldEBleGFtcGxlLmNvbSIsIkdpdmVuTmFtZSI6IkpvaG5ueSIsIlN1cm5hbWUiOiJSb2NrZXQiLCJuYW1lIjoiSm9obm55IFJvY2tldCIsImVtYWlsIjoianJvY2tldEBleGFtcGxlLmNvbSIsInBpY3R1cmUiOiJ3d3cuZXhhbXBsZS5jb20iLCJyb2xlcyI6WyJzdXBlcl91c2VyIiwidXNlciIsImJpbGxpbmdfYWRtaW4iXX0.lEDjPPCjr-Epv6pNslq-HK9vmxfstp1sY85GstlbU1I";
-  private final String emptyRolesJwt =
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJPbmxpbmUgSldUIEJ1aWxkZXIiLCJpYXQiOjE2MjEzNjM1OTcsImV4cCI6MTY1Mjg5OTU5NywiYXVkIjoid3d3LmV4YW1wbGUuY29tIiwic3ViIjoianJvY2tldEBleGFtcGxlLmNvbSIsIkdpdmVuTmFtZSI6IkpvaG5ueSIsIlN1cm5hbWUiOiJSb2NrZXQiLCJuYW1lIjoiSm9obm55IFJvY2tldCIsImVtYWlsIjoianJvY2tldEBleGFtcGxlLmNvbSIsInBpY3R1cmUiOiJ3d3cuZXhhbXBsZS5jb20iLCJodHRwczovL3RyYWNlYWJsZS5haS9yb2xlcyI6W119.sFUMZNyypj379xy5P4kqTbBXBOR5XvX2nhpKx6YiiwU";
-  private final String noRolesJwt =
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJPbmxpbmUgSldUIEJ1aWxkZXIiLCJpYXQiOjE2MjEzNjM1OTcsImV4cCI6MTY1Mjg5OTU5NywiYXVkIjoid3d3LmV4YW1wbGUuY29tIiwic3ViIjoianJvY2tldEBleGFtcGxlLmNvbSIsIkdpdmVuTmFtZSI6IkpvaG5ueSIsIlN1cm5hbWUiOiJSb2NrZXQiLCJuYW1lIjoiSm9obm55IFJvY2tldCIsImVtYWlsIjoianJvY2tldEBleGFtcGxlLmNvbSIsInBpY3R1cmUiOiJ3d3cuZXhhbXBsZS5jb20ifQ.Ui1Z2RhiVe3tq6uJPgcyjsfDBdeOeINs_gXEHC6cdpU";
   private final String testJwtUserId = "jrocket@example.com";
   private final String testJwtName = "Johnny Rocket";
   private final String testJwtPictureUrl = "www.example.com";
@@ -65,23 +64,59 @@ class JwtParserTest {
   }
 
   @Test
-  void testRolesCanBeParsedFromToken() {
+  void testClaimCanBeParsedFromToken() {
     JwtParser parser = new JwtParser();
     Optional<Jwt> jwt = parser.fromJwt(testJwt);
-    assertEquals(Optional.of(testRoles), jwt.map(j -> j.getRoles(testRolesClaim)));
+    assertEquals(
+        Optional.of(testRoles),
+        jwt.flatMap(j -> j.getClaim(testRolesClaim)).flatMap(claim -> claim.asList(String.class)));
   }
 
   @Test
-  void testRolesAreEmptyIfRolesArrayIsEmptyInJwt() {
+  void testCanParseObjectClaim() {
+    String jwtWithObjectArrayClaim =
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJPbmxpbmUgSldUIEJ1aWxkZXIiLCJpYXQiOjE2MjEzNjM1OTcsImV4cCI6MTY1Mjg5OTU5NywiYXVkIjoid3d3LmV4YW1wbGUuY29tIiwic3ViIjoianJvY2tldEBleGFtcGxlLmNvbSIsIkdpdmVuTmFtZSI6IkpvaG5ueSIsIlN1cm5hbWUiOiJSb2NrZXQiLCJuYW1lIjoiSm9obm55IFJvY2tldCIsImVtYWlsIjoianJvY2tldEBleGFtcGxlLmNvbSIsInBpY3R1cmUiOiJ3d3cuZXhhbXBsZS5jb20iLCJyb2xlcyI6W3siaWQiOiJzdXBlcl91c2VyIiwidmFsdWVzIjpbXX0seyJpZCI6InVzZXIiLCJ2YWx1ZXMiOlsiZm9vIl19XX0.EJyZWwbfbCAS4NJdwURAsOewf8V6863D1ZqXGTVZigE";
+    /*
+      {
+        "iss": "Online JWT Builder",
+        "iat": 1621363597,
+        "exp": 1652899597,
+        "aud": "www.example.com",
+        "sub": "jrocket@example.com",
+        "GivenName": "Johnny",
+        "Surname": "Rocket",
+        "name": "Johnny Rocket",
+        "email": "jrocket@example.com",
+        "picture": "www.example.com",
+        "roles": [
+          {
+            "id": "super_user",
+            "values": []
+          },
+          {
+            "id": "user",
+            "values": [
+              "foo"
+            ]
+          }
+        ]
+      }
+    */
     JwtParser parser = new JwtParser();
-    Optional<Jwt> jwt = parser.fromJwt(emptyRolesJwt);
-    assertEquals(Optional.of(Collections.emptyList()), jwt.map(j -> j.getRoles(testRolesClaim)));
+    Optional<Jwt> jwt = parser.fromJwt(jwtWithObjectArrayClaim);
+
+    assertEquals(
+        Optional.of(
+            List.of(
+                new TestObject("super_user", List.of()), new TestObject("user", List.of("foo")))),
+        jwt.flatMap(j -> j.getClaim("roles")).flatMap(claim -> claim.asList(TestObject.class)));
   }
 
-  @Test
-  void testRolesAreEmptyIfRolesIfNoRolesClaimInToken() {
-    JwtParser parser = new JwtParser();
-    Optional<Jwt> jwt = parser.fromJwt(noRolesJwt);
-    assertEquals(Optional.of(Collections.emptyList()), jwt.map(j -> j.getRoles(testRolesClaim)));
+  @Value
+  @NoArgsConstructor(force = true)
+  @AllArgsConstructor
+  private static class TestObject {
+    @JsonProperty String id;
+    @JsonProperty List<String> values;
   }
 }
